green/example-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-green
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8081
      targetPort: http
  selector:
    app: hello
    version: green
