green/example-green-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: treafik
spec:
  rules:
    - host: dely.com
      http:
        paths:
          -  backend:
              serviceName: hello-green
              servicePort: 8081
